@@ -2,13 +2,15 @@
 Hash: SHA1
 
 AUX Gentoo 644 RMD160 29853c59779a2eb685aa4082bf5c312588fbe633 SHA1 01f2135774ead9534fb374cfbeb7eb123d9aff55 SHA256 1ddff80be5707ff8eb888d8f41d9cd0df5c7e0e1bd84c28ed962b4c71028efc1
+DIST xfce-utils-4.5.92.tar.bz2 599262 RMD160 d4fac453effc22ccc8e453b0367f75b785e9a690 SHA1 44521a81d662458e6aaaabea2d7abb52d9f06613 SHA256 71327b5dc31c8a2d354c97a2661ebac6a9b555db553eeb5bbdbddce911563e19
+EBUILD xfce-utils-4.5.92.ebuild 871 RMD160 5b85acda575aa15212dc05a50ad5ceaf1a51ac76 SHA1 20dba5b4850b4a3b575ca5b14ebd6516c78775c8 SHA256 3316fe7f1cfa9e5fd01d00491a4118bcd69b2e31a23adcc52d589e76514cbf47
 EBUILD xfce-utils-9999.ebuild 871 RMD160 5b85acda575aa15212dc05a50ad5ceaf1a51ac76 SHA1 20dba5b4850b4a3b575ca5b14ebd6516c78775c8 SHA256 3316fe7f1cfa9e5fd01d00491a4118bcd69b2e31a23adcc52d589e76514cbf47
-MISC ChangeLog 994 RMD160 fb0e0fae2b333985101033eabab9098b1787581a SHA1 80082112332b7b98321250a6aec2f7617083d34d SHA256 a70c57f7394547a8cbcc5ae9d88857cf06ddbc335d46d46cae3103cc1dcc1a84
+MISC ChangeLog 1133 RMD160 5650a2a59f66bda43f44b79b172ae567c63e3095 SHA1 ee1f8578bff567d782c45906cb57209dcaf9b070 SHA256 a22e268c32d6c313a7eb5f30b5a37fe170c614a83bd5123897b3e715922f352e
 MISC metadata.xml 218 RMD160 e064747a2c888959d939ed09a70c242d905c89ea SHA1 8ff18a8acc37d299a3cc7b30663ca3eb0f91032e SHA256 c47df69ae42900828c5afb0aa77ee6f9ddca55a79b3326f69a0bbf8119f3d5df
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXgvIACgkQKhnDs22gwa9F6QCfa//oBm8Cl57GxCB+lsvdJwjB
-gJAAnRqI3YfdO03WHQ2KF6PEYVOUXdnW
-=xqWX
+iEYEARECAAYFAkkdtjIACgkQKhnDs22gwa9LpwCguPdZ+mXCV+1Oq62K3n6IS8w7
+XZoAmwcKPPIArffoghw4oqJT0xvEm+Gm
+=548K
 -----END PGP SIGNATURE-----
